[fix] poke spot 이상한 부분 수정

--- a/src/main/webapp/css/pokedexFrameAccount.css
+++ b/src/main/webapp/css/pokedexFrameAccount.css
@@ -42,17 +42,6 @@
 }
 
 #pokedex-blue-frame {
-/*box-sizing: border-box;
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 98%;
-  height: 68vh;
-  padding: 1.5vw;
-  background-size: contain;
-  background: #c1daff url(../img/pokedex-bg.png) no-repeat center;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 50px; */
   box-sizing: border-box;
   position: absolute;
   top: 0;
@@ -98,6 +87,7 @@
 	.pokedex-title-txt {
 		margin-top: 20vh;
 	}
+}
 
 #poke-spot-icon {
   width: 10vw;
