--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -76,6 +76,23 @@ article {
 	width: 1em;
 }
 
+#dark-mode-bg{
+	display:flex;
+	align-items: center;
+	width: auto;
+	height:30px;
+	background-color: rgba(255,255,255,0.5);
+}
+
+.dark-mode-icons-gap{
+	margin: 0 5px;
+}
+
+.drop-menu-wrapper{
+	display: flex;
+	justify-content: center;	
+}
+
 .drop-menu {
 	display: flex;
 }
