구글 로그인 제거

--- a/src/main/webapp/css/mypage.css
+++ b/src/main/webapp/css/mypage.css
@@ -38,6 +38,7 @@
     border: transparent;
     margin-bottom: 10px;
     padding-left: 6vw;
+	overflow: hidden;
 }
 .user-icon {
     position: absolute;
