--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -70,6 +70,8 @@ article {
 
 .header-icons li {
 	padding: 0.5em 0.75em;
+    display: flex;
+    align-items: center;
 }
 
 .header-icons img {
@@ -80,8 +82,10 @@ article {
 	display:flex;
 	align-items: center;
 	width: auto;
-	height:30px;
-	background-color: rgba(255,255,255,0.5);
+	padding: 0 5px;
+	height:25px;
+	background-color: rgba(255,255,255,0.2);
+	border-radius:25px;
 }
 
 .dark-mode-icons-gap{
@@ -90,15 +94,19 @@ article {
 
 .drop-menu-wrapper{
 	display: flex;
-	justify-content: center;	
+	align-items: center;
 }
 
 .drop-menu {
 	display: flex;
 }
 
+
 .drop-menu li {
 	padding: 0.5em 0.75em;
+	display:flex;
+	align-items: flex-end;
+
 }
 
 .drop-menu li a {
