--- a/src/main/webapp/css/game.css
+++ b/src/main/webapp/css/game.css
@@ -16,7 +16,7 @@
 .quiz-LeftBlank{
   height: 71vh;
   width: 20vw;
-  border : 3px solid red;
+/*   border : 3px solid red; */
 }
 
 .quiz-RightBlank{
