[Feat][Fix] 모바일 반응형 작업, offcanvas menu 도입
1. 모든 jsp에 반응형 코드 추가   <meta name="viewport" content="width=device-width, initial-scale=1">

2. 부트스트랩 적용시 body tag에 css속성이 충돌안나게 index.jsp의 body -> #body 로 변경
￼
3. index.html에 page 안내 메세지 삭제

4. main 포켓몬 카드에 cursor:pointer 추가

5. 반응형 사이드 메뉴(offcanvas) 추가

--- a/src/main/webapp/css/pokemonMain.css
+++ b/src/main/webapp/css/pokemonMain.css
@@ -126,6 +126,7 @@
 
 .pokemon-card {
 /*   box-sizing: border-box; */
+  cursor: pointer;
   overflow: hidden;
   position: relative;
   margin-top: 5vh;
